# cmToolKit

./: CMakeLists.txt  README.md  cmToolKit_CONST.cmake
cmake/: license.rex
cmake/Modules/: NO_buildPkgconfigPc.cmake  NO_defaultCompilerFlags.cmake  __builtin_bswap.cmake  __builtin_clz.cmake  __builtin_expect.cmake  __builtin_unreachable.cmake  buildExecutables.cmake  buildLibraries.cmake  buildPkgconfigPc.cmake  ccache.cmake  checkFunction.cmake  checkHeader.cmake  checkPragmaDiagnostics.cmake  checkType.cmake  cmakeDefs.cmake  configurationReport.cmake  configureTemplates.cmake  defaultCompilerFlags.cmake  getProgramVersion.cmake  inlineAttr.cmake  installDirectories.cmake  isoHeaders.cmake  needLibCrypt.cmake  needLibDl.cmake  needLibM.cmake  needLibNsl.cmake  needLibPthread.cmake  needLibResolv.cmake  needLibRt.cmake  needLibSocket.cmake  pathconf.cmake  pkgConfig.cmake  rcsInfo.cmake  rcsInfo.cmake.FULL  sysconf.cmake  threadLocalAttr.cmake  vDrop.cmake  vDump.cmake  vScan.cmake  vSnap.cmake  (+2 more)
cmake/Templates/: cmake_uninstall.cmake.in  findPkg.cmake.in  pkgconfig.pc.in  pkgconfig.sh.in
